--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: mokh.rifan.ardiansyah@gmail.com
   facebook:
   flickr:
-  github: https://github.com/rifansyah
+  github: rifansyah
   instagram:
   linkedin:
   pinterest:
